--- a/style/index.css
+++ b/style/index.css
@@ -23,11 +23,11 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+    vertical-align: baseline;
+    border: 2px solid black;
 }
 *{
     box-sizing: border-box;
-    border: 2px solid black;
 }
 /* General */
 body{
@@ -42,6 +42,9 @@ h2{
 }
 a{
     text-decoration: none;
+}
+section{
+    margin:1%;
 }
 /* Header */
 header{
@@ -73,10 +76,9 @@ header a.currentPage{
 }
 /* Section 1 */
 .section1{
-    margin: 1%;
     width: 98%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 .section1 img{
@@ -91,12 +93,45 @@ header a.currentPage{
     margin: 5% 0;
 }
 .section1 div{
-    width: 300px;
+    width: 40%;
     flex-direction: column;
     display: flex;
     justify-content: flex-end;
 }
 
-/* Section 2 */
+/* Section Gallery */
+section.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+section.gallery div{
+    display: flex;
+    flex-direction: column;
+    width: 22%;
+    height: 22%;
+    align-items: center;
 
+}
+section.gallery img{
+   width: 100%;
+   height: 100%;
+   object-fit: cover;
+
+
+}
 /* Footer */
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: darkcyan;
+    height: 40%;
+}
+footer div{
+    align-items: center;
+}
+footer div a{
+    border: 2px solid black;
+    text-align: center;
+}
