--- a/style/index.css
+++ b/style/index.css
@@ -24,7 +24,6 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
     vertical-align: baseline;
-    border: 2px solid black;
 }
 *{
     box-sizing: border-box;
@@ -80,9 +79,14 @@ header a.currentPage{
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    margin-bottom: 4%;
+}
+.section1 p{
+    font-size: 20px;
 }
 .section1 img{
     width: 48%;
+    
 }
 .section1 a{
     color: black;
@@ -91,6 +95,7 @@ header a.currentPage{
     text-align: center;
     padding: 2% 0;
     margin: 5% 0;
+    font-size: 18px;
 }
 .section1 div{
     width: 40%;
@@ -98,6 +103,7 @@ header a.currentPage{
     display: flex;
     justify-content: flex-end;
 }
+
 
 /* Section Gallery */
 section.gallery{
@@ -111,6 +117,7 @@ section.gallery div{
     width: 22%;
     height: 22%;
     align-items: center;
+    margin-bottom: 5%;
 
 }
 section.gallery img{
@@ -126,12 +133,22 @@ footer{
     flex-direction: column;
     align-items: center;
     background-color: darkcyan;
-    height: 40%;
+    height: 20vh;
+    color: white;
 }
 footer div{
-    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
 }
 footer div a{
     border: 2px solid black;
+    text-decoration: none;
+    background-color: white;
+    color: black;
+    margin: 10% 10%;
     text-align: center;
+    padding: 5% 10%;
+    
 }
