--- a/style/index.css
+++ b/style/index.css
@@ -107,10 +107,12 @@ header a.currentPage{
 
 
 /* Section Gallery */
+
 section.gallery{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    border: 2px solid black;
 }
 section.gallery div{
     display: flex;
@@ -122,11 +124,7 @@ section.gallery div{
 
 }
 section.gallery img{
-   width: 100%;
-   height: 100%;
    object-fit: cover;
-
-
 }
 /* Footer */
 footer{
