--- a/style/index.css
+++ b/style/index.css
@@ -119,17 +119,17 @@ section.gallery div{
     flex-direction: column;
     align-items: center;
     margin-bottom: 5%;
-    width: 22%;
-    height: 22%;
+    width: 21.5vh;
+    height: 21.5vh;
 
 }
 section.gallery img{
    object-fit: cover;
    
 }
-img.weird{
+/* img.weird{
     height:22%;
-}
+} */
 /* Footer */
 footer{
     display: flex;
